feat(favorite): implementa operações de listagem, criação e remoção de favoritos
